feat: homepage demo, waterfall layout

--- a/src/styles/swiper.less
+++ b/src/styles/swiper.less
@@ -78,11 +78,11 @@
         color: #fff;
         text-align: left;
       }
-      .msg {
+      .video-title {
         position: relative;
         width: 100%;
         box-sizing: border-box;
-        font-size: @swiper-msg-font-size;
+        font-size: @swiper-video-title-font-size;
         text-align: left;
         color: #fff;
       }
