--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -3,5 +3,5 @@
 @base-font-size: 14px;
 @swiper-nickname-font-size: 24px;
 @swiper-icon-size: 24px;
-@swiper-msg-font-size: 18px;
+@swiper-video-title-font-size: 18px;
 @padding-small: calc(10 / 1920 * 100vw);
