--- a/src/styles/homepage.less
+++ b/src/styles/homepage.less
@@ -8,7 +8,7 @@
   overflow-x: hidden;
 
   .waterfall-list {
-    background-color: #243c61;
+    background-color: @theme-color;
   }
 
   &::-webkit-scrollbar {
