--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -2,11 +2,11 @@
 .left-aside {
   width: @left-aside-width;
   .navigation {
-    background-color: #243c61;
+    background-color: @theme-color;
     border: none;
 
     .el-menu-item:hover {
-      background-color: #243c61;
+      background-color: @theme-color;
     }
 
     .nav-item {
