--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,3 +1,5 @@
+@theme-color: #243c61;
+
 @header-height: calc(70 / 1080 * 100vh);
 @left-aside-width: calc(160 / 1920 * 100vw);
 @base-font-size: 14px;
