feat: add form validator and improve mask-swiper style

--- a/src/styles/video_card.less
+++ b/src/styles/video_card.less
@@ -4,7 +4,8 @@
   background-color: #252632;
 
   &:hover {
-    background-color: #252632b6;
+    // background-color: #252632b6;
+    background-color: #3535378f;
   }
   .video-cover {
     overflow: visible;
