--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -1,28 +1,41 @@
 @import '@/styles/variables.less';
 .left-aside {
   width: @left-aside-width;
+  min-width: 80px;
   .navigation {
     background-color: @theme-color;
     border: none;
+    margin: auto;
+    width: 80px;
+    text-align: center;
+    .el-menu-item {
+      padding-left: 0px !important;
+      padding: 0px !important;
+    }
 
     .el-menu-item:hover {
       background-color: @theme-color;
     }
 
     .nav-item {
+      position: relative;
       font-size: 14px;
       color: #dcebf0;
       border-radius: 5px;
-      width: 70px;
-      padding: 0px 10px;
+      width: 100%;
+      padding-right: 5px;
+      &:hover {
+        background-color: #ffffff27;
+      }
 
+      &:focus {
+        background-color: #ffffff27;
+      }
       &active {
         background-color: #ffffff27;
       }
     }
 
-    .nav-item:hover {
-      background-color: #ffffff27;
-    }
+    // .nav-item;
   }
 }
