--- a/src/styles/swiper.less
+++ b/src/styles/swiper.less
@@ -1,11 +1,20 @@
 @import '@/styles/variables.less';
 
 .video-swiper-container {
-  width: calc(100vw - @left-aside-width -20px);
   height: 100%;
   // overflow: hidden;
   cursor: pointer;
 
+  .eye-swiper.mask-swiper {
+    height: 100vh;
+    border-radius: 0px;
+    background-color: #0000008b;
+    .swiper-slide {
+      .video-content {
+        background-color: #121f33;
+      }
+    }
+  }
   .eye-swiper {
     height: calc(calc(100vh - 70px) * 0.95);
     // overflow: hidden;
