feat: add skeleton, listen progress and apply waterfall renderer  add register API

--- a/src/styles/video_card.less
+++ b/src/styles/video_card.less
@@ -11,6 +11,7 @@
     overflow: visible;
     position: relative;
     object-fit: cover;
+    min-height: 231px;
 
     .video-content {
       width: 100%;
