--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -53,3 +53,24 @@
     color: #fff;
   }
 }
+
+.el-popconfirm {
+  .el-button{
+    border-color: #eee;
+    border-radius: 5px;
+
+    background-color: #eee;
+    color: @theme-color;
+    font-size: @base-font-size;
+    &:hover {
+      border-color: #aebddb;
+      background-color: #aebddb;
+      color: #fff;
+    }
+    &:focus {
+      border-color: #aebddb;
+      background-color: #aebddb;
+      color: #fff;
+    }
+  }
+}
