--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -16,6 +16,11 @@
   .el-main {
     padding: 0px;
   }
+  .header-username {
+    text-align: center;
+    position: absolute;
+    right: 120px;
+  }
 
   .header-button {
     position: absolute;
@@ -55,7 +60,7 @@
 }
 
 .el-popconfirm {
-  .el-button{
+  .el-button {
     border-color: #eee;
     border-radius: 5px;
 
